feat: call it operations and add e2e tests
